kubernetes/infrastructure/shipwright/triggers-release.yaml
# Source: shipwright-triggers/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shipwright-build
  name: shipwright-triggers
  labels:
    helm.sh/chart: shipwright-triggers-0.0.1
    meta.helm.sh/release-name: shipwright-triggers
    meta.helm.sh/release-namespace: shipwright-build
    app.kubernetes.io/name: shipwright-triggers
    app.kubernetes.io/instance: shipwright-triggers
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: webhook
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: shipwright-triggers
    app.kubernetes.io/instance: shipwright-triggers
---
# Source: shipwright-triggers/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shipwright-build
  name: shipwright-triggers
  labels:
    helm.sh/chart: shipwright-triggers-0.0.1
    meta.helm.sh/release-name: shipwright-triggers
    meta.helm.sh/release-namespace: shipwright-build
    app.kubernetes.io/name: shipwright-triggers
    app.kubernetes.io/instance: shipwright-triggers
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: shipwright-triggers
      app.kubernetes.io/instance: shipwright-triggers
  template:
    metadata:
      labels:
        app.kubernetes.io/name: shipwright-triggers
        app.kubernetes.io/instance: shipwright-triggers
    spec:
      serviceAccountName: shipwright-triggers
      securityContext:
        runAsNonRoot: true
      containers:
        - name: shipwright-triggers
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/shipwright-io/triggers/triggers@sha256:fed8989bcb2ca7b8986659be74c16463858884f031789eb905e5c519dae1523d"
          args:
            - --health-probe-bind-address
            - ":8081"
          imagePullPolicy: IfNotPresent
          ports:
            - name: webhook
              containerPort: 8080
              protocol: TCP
            - name: probe
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: probe
          readinessProbe:
            httpGet:
              path: /readyz
              port: probe

---
